--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -29,3 +29,17 @@ body
                     li
                         a(href='#') 童裝
     block content
+
+    footer.main_footer
+        .container_footer
+            .box_footer
+                img.logo_footer(src='/static/imgs/logo_footer.png')
+                .title_footer
+                    h3 GU 搜尋
+                    h4 GU 價格查詢比價網
+            .box_footer.copyright
+                h4 
+                    |GU 搜尋是一個專案作品，與 UNIQLO 或 GU 無關。
+                    br
+                    |本網站所有提及之商標與名稱皆屬該公司所有。
+
