--- a/public/css/common.css
+++ b/public/css/common.css
@@ -5,7 +5,7 @@
 body {
    margin: 0;
 }
-/* ---- Navigation ---- */
+/* ---- Header ---- */
 .main_header {
    background-color: white;
    position: fixed;
@@ -70,11 +70,49 @@ body {
    color: black;
    text-decoration: none;
 }
-
 .main_header > .container > .nav_bar > .menu {
    max-height: 30px;
    max-width: 30px;
    margin: 10px 10px 10px auto;
+}
+
+/* ---- Footer ---- */
+.main_footer {
+   color: #EFEFEF;
+   background: #333;
+   margin: 0;
+   width: 100%;
+   height: auto;
+   padding: auto;
+   padding-top: 10px;
+}
+.main_footer > .container_footer {
+   height: 100%;
+   display: flex;
+   flex-wrap: wrap;
+   max-width: 1000px;
+   padding: 10px 0;
+   margin: 0 auto;
+}
+.main_footer > .container_footer > .box_footer {
+   display: flex;
+   flex: 1 100%;
+   margin: 5px auto 15px;
+}
+.main_footer > .container_footer > .box_footer > .logo_footer {
+   margin: 10px 20px;
+   height: 40px;
+   width: 40px;
+}
+.main_footer > .container_footer > .box_footer > .title_footer > h3,
+.main_footer > .container_footer > .box_footer > .title_footer > h4 {
+   font-weight: 500;
+   margin: 5px 0;
+}
+.main_footer > .container_footer > .copyright > h4 {
+   font-weight: 500;
+   margin: 0 20px;
+   line-height: 2rem;
 }
 
 @media (min-width: 750px) {
@@ -83,5 +121,15 @@ body {
    }
    .main_header > .container > .nav_bar > ul {
        display: block;
+   }
+   .main_footer > .container_footer {
+      justify-content: flex-end;
+   }
+
+   .main_footer > .container_footer > .box_footer{
+      flex: auto;
+   }
+   .main_footer > .container_footer > .copyright > h4 {
+      margin: 0 15px 0 auto;
    }
 }
