--- a/public/css/common.css
+++ b/public/css/common.css
@@ -42,6 +42,7 @@ body {
    border-radius: 0.3rem 0 0 0.3rem;
    width: 180px;
    height: 35px;
+   padding: 0.5em;
 }
 .main_header > .container > .box > .search_btn {
    background: transparent;
