--- a/static/css/product.css
+++ b/static/css/product.css
@@ -1,5 +1,7 @@
 /* ---- Main ---- */
-
+main {
+   min-height: calc(100vh - 100px);
+}
 .container_1 {
    display: flex;
    flex-wrap: wrap;
@@ -30,20 +32,20 @@
 .container_1 > .about_box > .name_box >.name {
    font-size: 1.25rem;
    line-height: 1.25em;
-    color: #404040;
-    font-weight: 600;
-    margin-bottom: 5px;
-    margin-top: 0;
+   color: #404040;
+   font-weight: 600;
+   margin-bottom: 5px;
+   margin-top: 0;
 }
 .container_1 > .about_box > .name_box > .number {
    font-size: 1rem;
    width: 100%;
-    font-weight: normal;
-    line-height: 2em;
-    color: #5a5a5a;
-    padding-bottom: 5px;
-    margin-bottom: 10px;
-    border-bottom: 1px solid #e6e6e6;
+   font-weight: normal;
+   line-height: 2em;
+   color: #5a5a5a;
+   padding-bottom: 5px;
+   margin-bottom: 10px;
+   border-bottom: 1px solid #e6e6e6;
 }
 .container_1 > .about_box > .discount_box {
    flex: 1 100%;
@@ -113,7 +115,7 @@
 
 .container_2_background {
    margin: 0;
-   padding-top: 20px;
+   padding: 20px 0;
    box-shadow: 0px 0px 2px 0 #f1f0f0;
    background: #f7f7f7;
 }
@@ -121,7 +123,8 @@
    display: flex;
    flex-wrap: wrap;
    max-width: 1000px;
-   margin: 0 auto 20px;
+   margin: 0 auto;
+   height: 100%;
 }
 
 .container_2 > h2 {
@@ -129,9 +132,9 @@
    flex: 1 100%;
    font-size: 1.25rem;
    color: #404040;
-    font-weight: 500;
-    padding-bottom: 6px;
-    border-bottom: 1px solid #e6e6e6;
+   font-weight: 500;
+   padding-bottom: 6px;
+   border-bottom: 1px solid #e6e6e6;
 }
 
 .container_2 > .images_box {
@@ -149,8 +152,6 @@
 
 @media (min-width: 750px) {
    .container_2 > .images_box > .images {
-      width: calc(33% - (5px * 2));
-      margin: 5px;
-      border-radius: 0.3rem;
+      width: calc(33% - (4px * 2));
    } 
 }
