--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -2,10 +2,10 @@ doctype html
 html
     head
         block title
-        title  | GU 搜尋 | GU 比價
+            title  | GU 搜尋 | GU 比價
         meta(name='viewport' content='width=device-width, , initial-scale=1.0')
         block css
-        link(rel='stylesheet' href='/static/css/layout.css')
+            link(rel='stylesheet' href='/static/css/layout.css')
 body
     header.main_header
         .container
@@ -31,6 +31,13 @@ body
                 button#member_btn.member_btn
                     img.member_logo(src='/static/imgs/member.png')
 
+    #member_modal.member_modal
+        .modal_content
+            .modal_container
+                button.fb_btn(onclick="FB_login()")
+                    img.fb_icon(src="/static/imgs/fb.png")
+                    p Log in with Facebook
+
     block content
 
     footer.main_footer
@@ -47,4 +54,5 @@ body
                     |本網站所有提及之商標與名稱皆屬該公司所有。
 
 block js
-script(src='/static/js/layout.js')
+    script(crossorigin='anonymous' src='https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0&appId=606485106744129&autoLogAppEvents=1')
+    script(src='/static/js/layout.js')
