--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -110,21 +110,72 @@ body {
    top: 25%;
    left: 35%;
    right: 35%;
-   max-height: 60%;
+   max-height: 100%;
    overflow: auto;
    width: 30%;
  }
  .member_modal > .modal_content > .modal_container {
+   height: 100%;
    width: 300px;
-   margin: 30px auto;
+   margin: 0 auto;
+ }
+ .member_modal > .modal_content > .modal_container > .google_btn {
+   padding: 0;
+   height: 40px;
+   width: 250px;
+   background-color: white;
+   border: 0px;
+   border-radius: 5px;
+   margin: 20px auto;
+   display: block;
+   cursor: pointer;
+ }
+ .member_modal > .modal_content > .modal_container > .google_btn > .google_icon {
+   position: relative;
+   top: 3.5px;
+   height: 20px;
+   width: 20px;
+ }
+
+ .member_modal > .modal_content > .modal_container > .google_btn > p {
+   display: inline-block;
+   color: black;
+   font-size: 1rem;
+   line-height: 40px;
+   margin: 0 0 0 10px;
+ }.member_modal > .modal_content > .modal_container > .github_btn {
+   padding: 0;
+   height: 40px;
+   width: 250px;
+   background-color: black;
+   border: 0px;
+   border-radius: 5px;
+   margin: 20px auto;
+   display: block;
+   cursor: pointer;
+ }
+ .member_modal > .modal_content > .modal_container > .github_btn > .github_icon {
+   position: relative;
+   top: 3.5px;
+   height: 20px;
+   width: 20px;
+ }
+
+ .member_modal > .modal_content > .modal_container > .github_btn > p {
+   display: inline-block;
+   color: white;
+   font-size: 1rem;
+   line-height: 40px;
+   margin: 0 0 0 10px;
  }
  .member_modal > .modal_content > .modal_container > .fb_btn {
+   padding: 0;
    height: 40px;
    width: 250px;
    background-color: #4267B2;
    border: 0px;
    border-radius: 5px;
-   margin: 0 auto;
+   margin: 20px auto;
    display: block;
    cursor: pointer;
  }
