--- a/server/views/product.pug
+++ b/server/views/product.pug
@@ -22,10 +22,33 @@ block content
                #lowest_price.lowest_price
             #current_price.current_price_box
             #date_price.price_curve_box
+            details
+               summary 商品介紹
+               #about
+            details
+               summary 商品材質
+               #texture
             a#website.website_box 前往 GU 官網
+      .track_ctn_background
+         .track_ctn
+            .track_box
+               img(src="/static/imgs/bell.png")
+               h2 價格追蹤
+            form
+               input#track_number(type="text" name="track_number" style="display: none;")
+               .form_box
+                  .price_icon
+                     img(src="/static/imgs/dollar.png")
+                  input#track_price(type="number" name="track_price" placeholder="期望價格" max="99999" min='0' step="1")
+               .form_box
+                  .email_icon
+                     img(src="/static/imgs/email.png")
+                  input#track_email(type="email" name="track_email" placeholder="通知信箱")
+               .form_btn
+                  button#track_btn 開始追蹤
       .container_2_background
-         .container_2
-            h2 商品實照
+         details(open).container_2
+            summary 商品實照
             #images_box.images_box
             
 
