--- a/static/css/index.css
+++ b/static/css/index.css
@@ -76,3 +76,6 @@ main > .ctn > button {
    background: #eee;
    color: #5a5a5a;
 }
+main > .ctn > button:hover {
+   background-color: #c9c9c9;
+}
