--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -6,6 +6,14 @@ body {
    height: 100%;
    margin: 0;
 }
+button,
+input,
+summary {
+   outline: none;
+}
+summary:hover {
+   opacity: 0.7;
+}
 /* ---- Header ---- */
 .main_header {
    background-color: white;
@@ -44,6 +52,7 @@ body {
    width: 100px;
    height: 35px;
    padding: 0.5em;
+   font-size: 0.6rem;
 }
 .main_header > .container > .box > .search_btn {
    background: transparent;
@@ -51,6 +60,10 @@ body {
    border-radius: 0 0.3rem 0.3rem 0;
    width: 35px;
    cursor: pointer;
+   font-weight: 900;
+}
+.main_header > .container > .box > .search_btn:hover {
+   background-color: rgb(238, 238, 238);
 }
 .main_header > .container > .nav_bar {
    flex:auto;
@@ -266,6 +279,7 @@ body {
    }
    .main_header > .container > .box > .search {
       width: 150px;
+      font-size: 0.8rem;
    }
    .main_footer > .container_footer {
       justify-content: flex-end;
