--- a/static/css/product.css
+++ b/static/css/product.css
@@ -11,7 +11,7 @@ main {
 }
 .container_1 > .main_image_box {
    padding: 20px 10px 0 10px;
-   flex: 1 340px;
+   flex: 2 340px;
    height: 100%;
    width: 100%;
 }
@@ -97,8 +97,27 @@ main {
 .container_1 > .about_box > .price_curve_box > .plot-container > .svg-container {
    margin: 0 auto;
 }
+.container_1 > .about_box > details {
+   width: 100%;
+   margin: 0 0 10px 0;
+   flex: 1 100%;
+   border: 1px solid #e9e9e9;
+   border-radius: .28571rem;
+   padding: 10px 5px;
+   display: flex;
+}
+.container_1 > .about_box > details > summary {
+   font-size: 1rem;
+   margin-left: 5px;
+   cursor: pointer;
+}
+.container_1 > .about_box > details > div {
+   color: #5a5a5a;
+   font-size: 0.8rem;
+   margin: 10px 5px 0;
+}
 .container_1 > .about_box > .website_box {
-   margin: 0 5px;
+   margin: 10px 0 0 0 ;
    padding: 0.5em;
    flex: 1 100%;
    border: 1px solid #404040;
@@ -112,7 +131,92 @@ main {
    cursor: pointer;
    text-decoration: none;
 }
+.container_1 > .about_box > .website_box:hover {
+   border: 1px solid #f7f7f7;
+   background-color: #5a5a5a;
+   color: #f0f0f0;
+}
 
+.track_ctn_background {
+   margin: 0;
+   padding: 20px 0;
+}
+.track_ctn {
+   display: flex;
+   flex-direction: column;
+   max-width: 1000px;
+   margin: 0 auto;
+   height: 100%;
+}
+.track_ctn > .track_box {
+   display: flex;
+   margin: 0 20px 10px;
+   flex: 1 100%;
+   padding-bottom: 6px;
+   border-bottom: 1px solid #e6e6e6;
+}
+.track_ctn > .track_box > img {
+  height: 25px;
+}
+.track_ctn > .track_box > h2 {
+   margin: 0;
+   font-size: 1.25rem;
+   color: #404040;
+   font-weight: 500;
+}
+.track_ctn > form {
+   margin: 10px 20px;
+   flex: 1 100%;
+   font-size: 1.25rem;
+   color: #404040;
+   font-weight: 500;
+   display: flex;
+   flex-direction: column;
+}
+.track_ctn > form > .form_box {
+   display: flex;
+   margin-bottom: 20px;
+}
+.track_ctn > form > .form_box > div {
+   width: 35px;
+   height: 35px;
+   background: #e9ecef;
+   border: 1px solid #e9e9e9;
+   border-radius: 0.3rem 0 0 0.3rem;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+.track_ctn > form > .form_box > div > img {
+   height: 15px;
+}
+.track_ctn > form > .form_box > input {
+   border: 1px solid #e9e9e9;
+   border-radius: 0 0.3rem 0.3rem 0;
+   width: 100%;
+   height: 35px;
+   padding: 0.5em;
+}
+.track_ctn > form > .form_btn {
+   height: 35px;
+   margin-left: auto;
+}
+.track_ctn > form > .form_btn > button{
+   height: 35px;
+   border-radius: 0.3rem;
+   background-color: #3b3b3b;
+   color: #fff;
+   padding: .375rem .75rem;
+   font-weight: 700;
+   cursor: pointer;
+   border: 1px solid #404040;
+   text-align: center;
+}
+.track_ctn > form > .form_btn > button:hover {
+   border: 1px solid #f7f7f7;
+   background-color: #5a5a5a;
+   color: #f0f0f0;
+}
 .container_2_background {
    margin: 0;
    padding: 20px 0;
@@ -127,14 +231,16 @@ main {
    height: 100%;
 }
 
-.container_2 > h2 {
+.container_2 > summary {
    margin: 0 20px 10px;
    flex: 1 100%;
    font-size: 1.25rem;
    color: #404040;
    font-weight: 500;
+   padding-left: 10px;
    padding-bottom: 6px;
    border-bottom: 1px solid #e6e6e6;
+   cursor: pointer;
 }
 
 .container_2 > .images_box {
@@ -152,6 +258,19 @@ main {
 
 @media (min-width: 750px) {
    .container_2 > .images_box > .images {
-      width: calc(33% - (4px * 2));
-   } 
+      width: calc(33% - 16px);
+   }
+   .track_ctn > form {
+      flex-direction: row;
+   }
+   .track_ctn > form > .form_box{
+      margin-right: 20px;
+      margin-bottom: 0px;
+   }
+   .track_ctn > form > .form_box > input{
+      width: 200px;
+   }
+   .track_ctn > form > .form_btn{
+      margin-left: 10px;
+   }
 }
