Fix Google login problem

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -9,8 +9,8 @@ html
         meta(name="google-signin-client_id" content="943449462904-krjfkfl3789uvu46ukguh2cgsmddkpkt.apps.googleusercontent.com")
         block css
             link(rel='stylesheet' href='/static/css/layout.css')
-        script(async='' defer='' crossorigin='anonymous' src='https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0&appId=606485106744129&autoLogAppEvents=1')
-        script(async='' defer='' src="https://apis.google.com/js/platform.js?onload=GoogleSigninInit")
+        script(async defer crossorigin='anonymous' src='https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0&appId=606485106744129&autoLogAppEvents=1')
+        script(async defer src="https://apis.google.com/js/platform.js?onload=GoogleSigninInit")
 body
     header.main_header
         .container
