--- a/static/css/search.css
+++ b/static/css/search.css
@@ -29,12 +29,12 @@ main > .view > .products {
    display: flex;
    flex-wrap: wrap;
    margin: 0 10px 10px;
-   width: 100%;
+   flex: 1 100%;
 }
 main > .view > .products > .product{
    display: flex;
    flex-direction: column;
-   width: calc(50% - 30px);
+   width: calc(50% - 20px);
    margin: 10px;
    border-radius: 0.3rem;
    border: 1px solid #e9e9e9;
@@ -69,6 +69,6 @@ main > .view > .products > .product > .price{
 }
 @media (min-width: 750px) {
    main > .view > .products > .product{
-      width: calc(25% - 25px);
+      width: calc(25% - 20px);
    }
 }
