Create category & type pages

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -29,14 +29,14 @@ body
             .box.nav_bar
                 img#menu_img.menu(src='/static/imgs/menu.png')
                 ul#menu_list
-                    li
-                        a(href='/') 首頁
-                    li
-                        a(href='#') 男裝
-                    li
-                        a(href='#') 女裝
-                    li
-                        a(href='#') 童裝
+                    a(href='/')
+                        li 首頁
+                    a(href='/men')
+                        li 男裝
+                    a(href='/women')
+                        li 女裝
+                    a(href='/kids')
+                        li 童裝
             .box.member_box
                 button#member_btn.member_btn
                     img.member_logo(src='/static/imgs/member.png')
