--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -62,10 +62,10 @@ body
                     input#login_password.input(type='password' name='password' placeholder='Password')
                     br
                     button#loginBtn.btn log in
-                button.google_btn(onclick="Google_login()")
+                button.google_btn(onclick="GoogleLogin()")
                     img.google_icon(src="/static/imgs/google.png")
                     p Log in with Google
-                button.fb_btn(onclick="FB_login()")
+                button.fb_btn(onclick="FacebookLogin()")
                     img.fb_icon(src="/static/imgs/fb.png")
                     p Log in with Facebook
 
