--- a/static/css/search.css
+++ b/static/css/search.css
@@ -35,6 +35,14 @@ main > .view > .products {
   flex: 1 100%;
 }
 
+main > .view > .msg {
+  margin: 20px;
+  text-align: center;
+  flex: 1 100%;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
 main > .view > .products > .product {
   display: flex;
   flex-direction: column;
