--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -10,6 +10,7 @@ body {
 
 button,
 input,
+select,
 summary {
   outline: none;
 }
@@ -150,12 +151,13 @@ summary:hover {
   overflow: auto;
   max-width: 300px;
   display: flex;
+  border-radius: 5px;
 }
 
 .member_modal > .modal_content > .modal_container {
   height: 100%;
   flex: auto;
-  margin: 20px 20px 0 20px;
+  margin: 20px 30px 10px;
 }
 
 .member_modal > .modal_content > .modal_container > .nav {
@@ -164,10 +166,12 @@ summary:hover {
   float: left;
   height: 35px;
   line-height: 35px;
-  font-size: 1rem;
+  font-size: 0.75rem;
   text-align: center;
   cursor: pointer;
   text-transform: uppercase;
+  border-radius: 5px 5px 0 0;
+  font-weight: 700;
 }
 
 .member_modal > .modal_content > .modal_container > .login {
@@ -176,22 +180,25 @@ summary:hover {
 
 .member_modal > .modal_content > .modal_container > .form {
   background: white;
-  padding: 20px 20px 0;
+  padding: 10px 15px;
   clear: both;
   width: 100%;
   box-sizing: border-box;
   max-height: 450px;
+  border-radius: 0 0 5px 5px;
 }
 
 .member_modal > .modal_content > .modal_container > .form > .input {
   width: 100%;
+  height: 35px;
   padding: 10px;
   box-sizing: border-box;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   border: 2px solid #e9eaea;
   color: #3e3e40;
-  font-size: 0.75rem;
+  font-size: 0.7rem;
   outline: none;
+  border-radius: 5px;
 }
 
 .member_modal > .modal_content > .modal_container > .form > .input:focus {
@@ -201,21 +208,21 @@ summary:hover {
 .member_modal > .modal_content > .modal_container > .form > .btn {
   border: none;
   width: 100%;
-  background: #333;
-  height: 35px;
+  background-color: #7298e6;
+  height: 30px;
   text-align: center;
-  line-height: 35px;
+  line-height: 30px;
   text-transform: uppercase;
   color: #fff;
   font-weight: bold;
   letter-spacing: 1px;
   cursor: pointer;
-  margin-bottom: 20px;
+  border-radius: 5px;
+  font-size: 0.6rem;
 }
 
 .member_modal > .modal_content > .modal_container > .form > .btn:hover {
-  background-color: #5a5a5a;
-  color: #f0f0f0;
+  opacity: 0.7;
 }
 
 .member_modal > .modal_content > .modal_container > .login-form {
@@ -224,12 +231,12 @@ summary:hover {
 
 .member_modal > .modal_content > .modal_container > .google_btn {
   padding: 0;
-  height: 40px;
-  width: 250px;
+  height: 30px;
+  width: 180px;
   background-color: white;
   border: 0;
   border-radius: 5px;
-  margin: 20px 0;
+  margin: 10px auto;
   display: block;
   cursor: pointer;
 }
@@ -237,26 +244,26 @@ summary:hover {
 .member_modal > .modal_content > .modal_container > .google_btn > .google_icon {
   position: relative;
   top: 3.5px;
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
 }
 
 .member_modal > .modal_content > .modal_container > .google_btn > p {
   display: inline-block;
   color: black;
-  font-size: 1rem;
-  line-height: 40px;
+  font-size: 0.75rem;
+  line-height: 30px;
   margin: 0 0 0 10px;
 }
 
 .member_modal > .modal_content > .modal_container > .fb_btn {
   padding: 0;
-  height: 40px;
-  width: 250px;
+  height: 30px;
+  width: 180px;
   background-color: #4267b2;
   border: 0;
   border-radius: 5px;
-  margin: 20px 0;
+  margin: 10px 0;
   display: block;
   cursor: pointer;
 }
@@ -264,15 +271,15 @@ summary:hover {
 .member_modal > .modal_content > .modal_container > .fb_btn > .fb_icon {
   position: relative;
   top: 3.5px;
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
 }
 
 .member_modal > .modal_content > .modal_container > .fb_btn > p {
   display: inline-block;
   color: white;
-  font-size: 1rem;
-  line-height: 40px;
+  font-size: 0.75rem;
+  line-height: 30px;
   margin: 0 0 0 10px;
 }
 
@@ -393,6 +400,44 @@ summary:hover {
     max-height: 40px;
   }
 
+  .member_modal > .modal_content > .modal_container > .form {
+    padding: 15px;
+  }
+
+  .member_modal > .modal_content > .modal_container > .nav {
+    height: 40px;
+    line-height: 40px;
+    font-size: 0.8rem;
+  }
+
+  .member_modal > .modal_content > .modal_container > .form > .input {
+    font-size: 0.8rem;
+  }
+
+  .member_modal > .modal_content > .modal_container > .form > .btn {
+    height: 35px;
+    line-height: 35px;
+    font-size: 0.8rem;
+  }
+
+  .member_modal > .modal_content > .modal_container > .fb_btn,
+  .member_modal > .modal_content > .modal_container > .google_btn {
+    height: 40px;
+    width: 230px;
+  }
+
+  .member_modal > .modal_content > .modal_container > .fb_btn > .fb_icon,
+  .member_modal > .modal_content > .modal_container > .google_btn > .google_icon {
+    height: 20px;
+    width: 20px;
+  }
+
+  .member_modal > .modal_content > .modal_container > .fb_btn > p,
+  .member_modal > .modal_content > .modal_container > .google_btn > p {
+    font-size: 0.85rem;
+    line-height: 40px;
+  }
+
   .main_footer > .container_footer > .copyright > h4 {
     font-size: 1em;
     line-height: 2rem;
@@ -413,6 +458,55 @@ summary:hover {
 @media (min-width: 750px) {
   .main_header > .container > .nav_bar > .menu {
     display: none;
+  }
+
+  .member_modal > .modal_content {
+    max-width: 450px;
+  }
+
+  .member_modal > .modal_content > .modal_container {
+    margin: 40px 50px 30px;
+  }
+
+  .member_modal > .modal_content > .modal_container > .form {
+    padding: 20px;
+  }
+
+  .member_modal > .modal_content > .modal_container > .nav {
+    height: 45px;
+    line-height: 45px;
+    font-size: 1rem;
+  }
+
+  .member_modal > .modal_content > .modal_container > .form > .input {
+    margin-bottom: 15px;
+    height: 40px;
+    font-size: 0.95rem;
+  }
+
+  .member_modal > .modal_content > .modal_container > .form > .btn {
+    height: 40px;
+    line-height: 40px;
+    font-size: 0.95rem;
+  }
+
+  .member_modal > .modal_content > .modal_container > .fb_btn,
+  .member_modal > .modal_content > .modal_container > .google_btn {
+    margin-top: 15px;
+    height: 45px;
+    width: 270px;
+  }
+
+  .member_modal > .modal_content > .modal_container > .fb_btn > .fb_icon,
+  .member_modal > .modal_content > .modal_container > .google_btn > .google_icon {
+    height: 25px;
+    width: 25px;
+  }
+
+  .member_modal > .modal_content > .modal_container > .fb_btn > p,
+  .member_modal > .modal_content > .modal_container > .google_btn > p {
+    font-size: 1rem;
+    line-height: 45px;
   }
 
   .main_footer > .container_footer {
