Create Reverse Image Search

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -43,6 +43,8 @@ body
 
     #member_modal.member_modal
         .modal_content
+            #modal_close.modal_close
+                p x
             .modal_container
                 #nav_signup.nav.signup Sign Up
                 #nav_login.nav.login Log In
