--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -19,7 +19,15 @@ block content
         select#select_main.search_select_main
           option 關鍵字
           option 商品編號
-        input#search_main.search_input_main(type='text' placeholder=' 輸入商品關鍵字或編號...')
+        .search_main_div
+          input#search_main.search_input_main(type='text' placeholder=' 輸入商品關鍵字或編號...')
+          img#image_search_icon(src='/static/imgs/photo.png')
+          form(action="/imageSearch", method="post", enctype="multipart/form-data")
+            input#image_search_file(type='file' name="imageSearch")
+            input#image_search_submit(type='submit')
+          //- input#image_search_file.image_search_file(type='file' name="imageSearch")
+      .image_search_text
+          img#image_search_text(src='/static/imgs/image_search.png')
       button(onclick='mainSearchBtn()')
         |查看商品
 
