--- a/static/css/index.css
+++ b/static/css/index.css
@@ -27,6 +27,7 @@ main > .ctn > h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 1 100%;
 }
 
 main > .ctn > h1 > img {
@@ -36,14 +37,15 @@ main > .ctn > h1 > img {
 }
 
 main > .ctn > .search_main {
-  width: 100%;
+  flex: 1 100%;
   height: 45px;
   margin: 5px 0;
   display: flex;
 }
 
 main > .ctn > .search_main > .search_select_main {
-  width: 100px;
+  max-width: 100px;
+  flex: 1 100%;
   line-height: 1.25em;
   border: 1px solid #e9e9e9;
   padding: 1em 0.5em;
@@ -54,16 +56,55 @@ main > .ctn > .search_main > .search_select_main {
   margin: 0 0 0 10px;
 }
 
-main > .ctn > .search_main > .search_input_main {
+main > .ctn > .search_main > .search_main_div {
+  display: flex;
   width: calc(100% - 100px);
-  line-height: 1.25em;
   border: 1px solid #e9e9e9;
-  padding: 1em;
   border-radius: 0 0.3rem 0.3rem 0;
+  margin-right: 10px;
+  justify-content: space-between;
+}
+
+main > .ctn > .search_main > .search_main_div > .search_input_main {
+  width: calc(100% - 45px);
+  line-height: 1.25em;
+  border: none;
+  padding: 1em;
   color: #646464;
   background: #fff;
   border-color: #e9e9e9;
   margin: 0 10px 0 0;
+}
+
+main > .ctn > .search_main > .search_main_div > img {
+  margin: auto 15px auto 10px;
+  width: 20px;
+  height: 24px;
+  cursor: pointer;
+  opacity: 0.65;
+}
+
+main > .ctn > .search_main > .search_main_div > form {
+  display: none;
+}
+
+main > .ctn > .image_search_text {
+  height: 0;
+  width: 100%;
+  text-align: right;
+}
+
+main > .ctn > .image_search_text > img {
+  position: relative;
+  top: -20px;
+  right: -5px;
+  height: 40px;
+  width: 80px;
+  display: none;
+}
+
+.image_search_icon:hover {
+  display: inline-block;
 }
 
 main > .ctn > button {
