--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -23,7 +23,7 @@ block content
           input#search_main.search_input_main(type='text' placeholder=' 輸入商品關鍵字或編號...')
           img#image_search_icon(src='/static/imgs/photo.png')
           form(action="/imageSearch", method="post", enctype="multipart/form-data")
-            input#image_search_file(type='file' name="imageSearch")
+            input#image_search_file(type='file' name="imageSearch" accept='image/*')
             input#image_search_submit(type='submit')
           //- input#image_search_file.image_search_file(type='file' name="imageSearch")
       .image_search_text
