Create user profile page & Create favorite items

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -39,7 +39,7 @@ body
                         li 童裝
             .box.member_box
                 button#member_btn.member_btn
-                    img.member_logo(src='/static/imgs/member.png')
+                    img#member_logo.member_logo
 
     #member_modal.member_modal
         .modal_content
