--- a/server/views/product.pug
+++ b/server/views/product.pug
@@ -12,6 +12,9 @@ block content
       .container_1
          .main_image_box
             img#main_image.main_image
+            #favorite.favorite
+               img#favoriteIcon(src="/static/imgs/emptyStar.png")
+               #favoriteText 加入收藏
          .about_box
             .name_box
                h1#name.name
