--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -1,6 +1,7 @@
 doctype html
 html
     head
+        link(rel='shortcut icon' href='/static/imgs/favicon.png')
         block title
             title  | GU 搜尋 | GU 比價
         meta(name='viewport' content='width=device-width, , initial-scale=1.0')
