Create logout function

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -41,6 +41,17 @@ body
             .box.member_box
                 button#member_btn.member_btn
                     img#member_logo.member_logo
+        #profile_modal.profile_ctn_bg
+            .profile_ctn
+                #profile_close.profile_close
+                    p x
+                #profile_name.profile_name
+                a(href="/profile")
+                    p 個人資料
+                a(href="/profile")
+                    p 收藏清單
+                .logout
+                p#logoutBtn 登出
 
     #member_modal.member_modal
         .modal_content
